// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandCollapseAllButton renders per snapshot with allCardsCollapsed false 1`] = `
<DocumentFragment>
  <mock-button
    appearance="transparent"
    aria-expanded="true"
    icon="[object Object]"
    size="medium"
  >
    Collapse all
  </mock-button>
</DocumentFragment>
`;

exports[`ExpandCollapseAllButton renders per snapshot with allCardsCollapsed true 1`] = `
<DocumentFragment>
  <mock-button
    appearance="transparent"
    aria-expanded="false"
    aria-label="Expand all rules to show failed instances."
    icon="[object Object]"
    size="medium"
  >
    Expand all
  </mock-button>
</DocumentFragment>
`;
